--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -7,7 +7,7 @@ events {
 http {
   server {
     listen       8088;
-    server_name  localhost;
+    server_name  _;
 
     default_type  application/octet-stream;
     sendfile on;
@@ -21,6 +21,12 @@ http {
       include  /usr/local/etc/nginx/mime.types;
       root    SOURCE_ROOT/dist;
       try_files $uri $uri/ /index.html;
+    }
+
+    location /api/ {
+      proxy_pass          http://localhost:5000;
+      proxy_read_timeout 1800;
+      proxy_connect_timeout 1800;
     }
   }
 }
