--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "e2e": "ng e2e",
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-    "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
   },
   "dependencies": {
@@ -41,7 +40,7 @@
     "@angular/router": "^8.0.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "4.4.0",
-    "@nebular/eva-icons": "4.4.0",
+    "@nebular/eva-icons": "^4.6.0",
     "@nebular/security": "4.4.0",
     "@nebular/theme": "4.4.0",
     "@swimlane/ngx-charts": "^10.0.0",
@@ -59,7 +58,7 @@
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.2",
     "ng2-completer": "2.0.8",
-    "ng2-smart-table": "1.3.5",
+    "ng2-smart-table": "^1.3.5",
     "ngx-echarts": "^4.0.1",
     "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
