--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -23,7 +23,7 @@ http {
     }
 
     location /api/ {
-      proxy_pass          http://working-flask-tests_flask_1:5000;
+      proxy_pass          https://billing-engine-app-xwatwudzxq-ew.a.run.app/;
       proxy_read_timeout 1800;
       proxy_connect_timeout 1800;
     }
