--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
     }
 
     location /api/ {
-      proxy_pass          http://192.168.99.100:5000;
+      proxy_pass          https://billing-engine-app-xwatwudzxq-ew.a.run.app;
       proxy_read_timeout 1800;
       proxy_connect_timeout 1800;
     }
