Setup dockerfile + cloud run deployment working

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,4 +1,5 @@
 worker_processes  1;
+daemon off;
 
 events {
   worker_connections  1024;
@@ -6,7 +7,7 @@ events {
 
 http {
   server {
-    listen 80;
+    listen       $PORT;
     server_name  localhost;
 
     root   /usr/share/nginx/html;
@@ -23,7 +24,7 @@ http {
     }
 
     location /api/ {
-      proxy_pass          https://billing-engine-app-xwatwudzxq-ew.a.run.app/;
+      proxy_pass          $PROXYPASS;
       proxy_read_timeout 1800;
       proxy_connect_timeout 1800;
     }
